java_tester/TyCParser.java
// Generated from java_tester/TyC.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TyCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AUTO=1, BREAK=2, CASE=3, CONTINUE=4, DEFAULT=5, ELSE=6, FOR=7, IF=8, RETURN=9, 
		STRUCT=10, SWITCH=11, WHILE=12, INT_TYPE=13, FLOAT_TYPE=14, STRING_TYPE=15, 
		VOID_TYPE=16, ADD_OP=17, MIN_OP=18, MULT_OP=19, DIV_OP=20, MOD_OP=21, 
		EQ_OP=22, NEQ_OP=23, LESS_OP=24, GREAT_OP=25, LEQ_OP=26, GEQ_OP=27, OR_OP=28, 
		AND_OP=29, NOT_OP=30, INC_OP=31, DEC_OP=32, ASS_OP=33, MEMACC_OP=34, LROUND_BRACK=35, 
		RROUND_BRACK=36, LSQUARE_BRACK=37, RSQUARE_BRACK=38, LCURLY_BRACK=39, 
		RCURLY_BRACK=40, SEMICOLON=41, COMMA=42, COLON=43, ID=44, INT=45, FLOAT=46, 
		STRING=47, NEWLINE=48, WS=49, COMMENT=50, LINE_COMMENT=51, ILLEGAL_ESCAPE=52, 
		UNCLOSE_STRING=53, ERROR_CHAR=54;
	public static final int
		RULE_program = 0, RULE_prog_stat_list = 1, RULE_prog_stat = 2, RULE_func_decl = 3, 
		RULE_param_list = 4, RULE_param = 5, RULE_param_type = 6, RULE_return_type = 7, 
		RULE_struct_decl = 8, RULE_struct_var_decl_list = 9, RULE_struct_var_decl_stat = 10, 
		RULE_struct_var_type = 11, RULE_struct_lit = 12, RULE_stat_list = 13, 
		RULE_stat = 14, RULE_var_decl_list = 15, RULE_var_decl_stat = 16, RULE_var_decl_expr = 17, 
		RULE_var_type = 18, RULE_block_stat = 19, RULE_if_stat = 20, RULE_main_if_stat = 21, 
		RULE_else_if_stat = 22, RULE_while_stat = 23, RULE_for_stat = 24, RULE_for_init_stat = 25, 
		RULE_for_cond_stat = 26, RULE_for_update_stat = 27, RULE_switch_stat = 28, 
		RULE_case_expr_list = 29, RULE_case_expr = 30, RULE_default_case_expr = 31, 
		RULE_break_stat = 32, RULE_continue_stat = 33, RULE_return_stat = 34, 
		RULE_expr_stat = 35, RULE_lvalue = 36, RULE_expr_list = 37, RULE_expr = 38, 
		RULE_assign_expr = 39, RULE_assigned_expr = 40, RULE_arg_list = 41, RULE_arg = 42, 
		RULE_un_op = 43, RULE_pre_op = 44, RULE_post_op = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "prog_stat_list", "prog_stat", "func_decl", "param_list", 
			"param", "param_type", "return_type", "struct_decl", "struct_var_decl_list", 
			"struct_var_decl_stat", "struct_var_type", "struct_lit", "stat_list", 
			"stat", "var_decl_list", "var_decl_stat", "var_decl_expr", "var_type", 
			"block_stat", "if_stat", "main_if_stat", "else_if_stat", "while_stat", 
			"for_stat", "for_init_stat", "for_cond_stat", "for_update_stat", "switch_stat", 
			"case_expr_list", "case_expr", "default_case_expr", "break_stat", "continue_stat", 
			"return_stat", "expr_stat", "lvalue", "expr_list", "expr", "assign_expr", 
			"assigned_expr", "arg_list", "arg", "un_op", "pre_op", "post_op"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'auto'", "'break'", "'case'", "'continue'", "'default'", "'else'", 
			"'for'", "'if'", "'return'", "'struct'", "'switch'", "'while'", "'int'", 
			"'float'", "'string'", "'void'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
			"'!='", "'<'", "'>'", "'<='", "'>='", "'||'", "'&&'", "'!'", "'++'", 
			"'--'", "'='", "'.'", "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", 
			"','", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AUTO", "BREAK", "CASE", "CONTINUE", "DEFAULT", "ELSE", "FOR", 
			"IF", "RETURN", "STRUCT", "SWITCH", "WHILE", "INT_TYPE", "FLOAT_TYPE", 
			"STRING_TYPE", "VOID_TYPE", "ADD_OP", "MIN_OP", "MULT_OP", "DIV_OP", 
			"MOD_OP", "EQ_OP", "NEQ_OP", "LESS_OP", "GREAT_OP", "LEQ_OP", "GEQ_OP", 
			"OR_OP", "AND_OP", "NOT_OP", "INC_OP", "DEC_OP", "ASS_OP", "MEMACC_OP", 
			"LROUND_BRACK", "RROUND_BRACK", "LSQUARE_BRACK", "RSQUARE_BRACK", "LCURLY_BRACK", 
			"RCURLY_BRACK", "SEMICOLON", "COMMA", "COLON", "ID", "INT", "FLOAT", 
			"STRING", "NEWLINE", "WS", "COMMENT", "LINE_COMMENT", "ILLEGAL_ESCAPE", 
			"UNCLOSE_STRING", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TyC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TyCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Prog_stat_listContext prog_stat_list() {
			return getRuleContext(Prog_stat_listContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TyCParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			prog_stat_list();
			setState(93);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Prog_stat_listContext extends ParserRuleContext {
		public Prog_statContext prog_stat() {
			return getRuleContext(Prog_statContext.class,0);
		}
		public Prog_stat_listContext prog_stat_list() {
			return getRuleContext(Prog_stat_listContext.class,0);
		}
		public Prog_stat_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog_stat_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).enterProg_stat_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).exitProg_stat_list(this);
		}
	}

	public final Prog_stat_listContext prog_stat_list() throws RecognitionException {
		Prog_stat_listContext _localctx = new Prog_stat_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog_stat_list);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRUCT:
			case INT_TYPE:
			case FLOAT_TYPE:
			case STRING_TYPE:
			case VOID_TYPE:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				prog_stat();
				setState(96);
				prog_stat_list();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Prog_statContext extends ParserRuleContext {
		public Func_declContext func_decl() {
			return getRuleContext(Func_declContext.class,0);
		}
		public Struct_declContext struct_decl() {
			return getRuleContext(Struct_declContext.class,0);
		}
		public Prog_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).enterProg_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).exitProg_stat(this);
		}
	}

	public final Prog_statContext prog_stat() throws RecognitionException {
		Prog_statContext _localctx = new Prog_statContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_prog_stat);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_TYPE:
			case FLOAT_TYPE:
			case STRING_TYPE:
			case VOID_TYPE:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				func_decl();
				}
				break;
			case STRUCT:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				struct_decl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_declContext extends ParserRuleContext {
		public Return_typeContext return_type() {
			return getRuleContext(Return_typeContext.class,0);
		}
		public TerminalNode ID() { return getToken(TyCParser.ID, 0); }
		public TerminalNode LROUND_BRACK() { return getToken(TyCParser.LROUND_BRACK, 0); }
		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class,0);
		}
		public TerminalNode RROUND_BRACK() { return getToken(TyCParser.RROUND_BRACK, 0); }
		public Block_statContext block_stat() {
			return getRuleContext(Block_statContext.class,0);
		}
		public Func_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).enterFunc_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).exitFunc_decl(this);
		}
	}

	public final Func_declContext func_decl() throws RecognitionException {
		Func_declContext _localctx = new Func_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_func_decl);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				return_type();
				setState(106);
				match(ID);
				setState(107);
				match(LROUND_BRACK);
				setState(108);
				param_list();
				setState(109);
				match(RROUND_BRACK);
				setState(110);
				block_stat();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				match(ID);
				setState(113);
				match(LROUND_BRACK);
				setState(114);
				param_list();
				setState(115);
				match(RROUND_BRACK);
				setState(116);
				block_stat();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Param_listContext extends ParserRuleContext {
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(TyCParser.COMMA, 0); }
		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class,0);
		}
		public Param_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).enterParam_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).exitParam_list(this);
		}
	}

	public final Param_listContext param_list() throws RecognitionException {
		Param_listContext _localctx = new Param_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_param_list);
		try {
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				param();
				setState(121);
				match(COMMA);
				setState(122);
				param_list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				param();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public Param_typeContext param_type() {
			return getRuleContext(Param_typeContext.class,0);
		}
		public TerminalNode ID() { return getToken(TyCParser.ID, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).exitParam(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			param_type();
			setState(129);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Param_typeContext extends ParserRuleContext {
		public TerminalNode INT_TYPE() { return getToken(TyCParser.INT_TYPE, 0); }
		public TerminalNode STRING_TYPE() { return getToken(TyCParser.STRING_TYPE, 0); }
		public TerminalNode FLOAT_TYPE() { return getToken(TyCParser.FLOAT_TYPE, 0); }
		public TerminalNode ID() { return getToken(TyCParser.ID, 0); }
		public Param_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).enterParam_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).exitParam_type(this);
		}
	}

	public final Param_typeContext param_type() throws RecognitionException {
		Param_typeContext _localctx = new Param_typeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_param_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 17592186101760L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Return_typeContext extends ParserRuleContext {
		public Param_typeContext param_type() {
			return getRuleContext(Param_typeContext.class,0);
		}
		public TerminalNode VOID_TYPE() { return getToken(TyCParser.VOID_TYPE, 0); }
		public Return_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).enterReturn_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).exitReturn_type(this);
		}
	}

	public final Return_typeContext return_type() throws RecognitionException {
		Return_typeContext _localctx = new Return_typeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_return_type);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_TYPE:
			case FLOAT_TYPE:
			case STRING_TYPE:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				param_type();
				}
				break;
			case VOID_TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(VOID_TYPE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Struct_declContext extends ParserRuleContext {
		public TerminalNode STRUCT() { return getToken(TyCParser.STRUCT, 0); }
		public TerminalNode ID() { return getToken(TyCParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(TyCParser.SEMICOLON, 0); }
		public TerminalNode LCURLY_BRACK() { return getToken(TyCParser.LCURLY_BRACK, 0); }
		public Struct_var_decl_listContext struct_var_decl_list() {
			return getRuleContext(Struct_var_decl_listContext.class,0);
		}
		public TerminalNode RCURLY_BRACK() { return getToken(TyCParser.RCURLY_BRACK, 0); }
		public Struct_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).enterStruct_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).exitStruct_decl(this);
		}
	}

	public final Struct_declContext struct_decl() throws RecognitionException {
		Struct_declContext _localctx = new Struct_declContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_struct_decl);
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				match(STRUCT);
				setState(138);
				match(ID);
				setState(139);
				match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				match(STRUCT);
				setState(141);
				match(ID);
				setState(142);
				match(LCURLY_BRACK);
				setState(143);
				struct_var_decl_list();
				setState(144);
				match(RCURLY_BRACK);
				setState(145);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Struct_var_decl_listContext extends ParserRuleContext {
		public Struct_var_decl_statContext struct_var_decl_stat() {
			return getRuleContext(Struct_var_decl_statContext.class,0);
		}
		public Struct_var_decl_listContext struct_var_decl_list() {
			return getRuleContext(Struct_var_decl_listContext.class,0);
		}
		public Struct_var_decl_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_var_decl_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).enterStruct_var_decl_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).exitStruct_var_decl_list(this);
		}
	}

	public final Struct_var_decl_listContext struct_var_decl_list() throws RecognitionException {
		Struct_var_decl_listContext _localctx = new Struct_var_decl_listContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_struct_var_decl_list);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_TYPE:
			case FLOAT_TYPE:
			case STRING_TYPE:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				struct_var_decl_stat();
				setState(150);
				struct_var_decl_list();
				}
				break;
			case RCURLY_BRACK:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Struct_var_decl_statContext extends ParserRuleContext {
		public Struct_var_typeContext struct_var_type() {
			return getRuleContext(Struct_var_typeContext.class,0);
		}
		public TerminalNode ID() { return getToken(TyCParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(TyCParser.SEMICOLON, 0); }
		public Struct_var_decl_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_var_decl_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).enterStruct_var_decl_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).exitStruct_var_decl_stat(this);
		}
	}

	public final Struct_var_decl_statContext struct_var_decl_stat() throws RecognitionException {
		Struct_var_decl_statContext _localctx = new Struct_var_decl_statContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_struct_var_decl_stat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			struct_var_type();
			setState(156);
			match(ID);
			setState(157);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Struct_var_typeContext extends ParserRuleContext {
		public TerminalNode INT_TYPE() { return getToken(TyCParser.INT_TYPE, 0); }
		public TerminalNode STRING_TYPE() { return getToken(TyCParser.STRING_TYPE, 0); }
		public TerminalNode FLOAT_TYPE() { return getToken(TyCParser.FLOAT_TYPE, 0); }
		public TerminalNode ID() { return getToken(TyCParser.ID, 0); }
		public Struct_var_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_var_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).enterStruct_var_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TyCListener ) ((TyCListener)listener).exitStruct_var_type(this);
		}
	}
